--- a/app/components/header.module.scss
+++ b/app/components/header.module.scss
@@ -19,6 +19,20 @@
     flex-direction: column;
     font-weight: bold;
     margin-left: 20px;
+    cursor: pointer;
+  }
+  .sideMenu {
+    height: 100%;
+    width: 250px !important;
+    position: fixed;
+    z-index: 1;
+    background-color: $backgroundOne;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    display: none;
+    transition: 0.5s;
+    padding-top: 60px;
   }
 }
 
@@ -46,6 +60,29 @@
     .menu:hover {
       background-color: $backgroundTwo;
       transition: background-color 250ms ease-in-out;
+    }
+    .sideMenu {
+      height: 100%;
+      width: 250px !important;
+      position: fixed;
+      z-index: 1;
+      background-color: $backgroundOne;
+      top: 0;
+      left: 0;
+      overflow-x: hidden;
+      transition: 0.5s;
+      padding-top: 60px;
+      display: none;
+      a {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        display: block;
+        transition: 0.3s;
+      }
+      a:hover {
+        color: $backgroundTwo;
+      }
     }
   }
 }
