--- a/app/components/header.module.scss
+++ b/app/components/header.module.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     font-weight: bold;
-    margin-right: 40px;
+    margin-right: 30px;
     font-size: 20px;
   }
   .menu {
@@ -63,20 +63,21 @@
     .menuContentVisible {
       display: flex;
       flex-direction: column;
-      align-items: end;
+      border: 2px solid;
+      border-color: black;
+      align-items: center;
       padding: 10px;
       font-size: larger;
       position: absolute;
       min-width: 12%;
       min-height: 15%;
-      margin-top: 35px;
-      background-color: $backgroundOne;
+      margin-top: 45px;
     }
     .menuContentInvisible {
       display: none;
     }
     .menu:hover {
-      width: 60px;
+      width: 55px;
     }
   }
 }
