--- a/app/components/header.module.scss
+++ b/app/components/header.module.scss
@@ -3,7 +3,7 @@
 .header {
   display: flex;
   background-color: $backgroundOne;
-  justify-content: space-between;
+
   align-items: center;
   height: 150px;
   margin: 0;
@@ -41,7 +41,6 @@
   .header {
     display: flex;
     background-color: $backgroundOne;
-    justify-content: space-between;
     align-items: center;
     height: 150px;
     margin: 0;
@@ -49,7 +48,7 @@
       display: flex;
       flex-direction: column;
       font-weight: bold;
-      margin-right: 800px;
+      margin-left: 38%;
       font-size: 30px;
     }
     .menu {
@@ -57,7 +56,11 @@
       flex-direction: column;
       font-weight: bold;
       margin-left: 75px;
-      width: 50px;
+      height: 50px;
+      transition: all 250ms ease-in-out;
+    }
+    .home {
+      height: 50px;
       transition: all 250ms ease-in-out;
     }
     .menuContentVisible {
@@ -77,7 +80,10 @@
       display: none;
     }
     .menu:hover {
-      width: 55px;
+      height: 55px;
+    }
+    .home:hover {
+      height: 55px;
     }
   }
 }
