--- a/app/components/header.module.scss
+++ b/app/components/header.module.scss
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     font-weight: bold;
-    margin-right: 30px;
+    margin-left: 20%;
     font-size: 20px;
   }
   .menu {
@@ -20,6 +20,9 @@
     font-weight: bold;
     margin-left: 20px;
     cursor: pointer;
+  }
+  .home {
+    height: 50px;
   }
   .menuContentVisible {
     display: flex;
