--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 50px;
+    max-width: 600px;
   }
   .button {
     width: 100px;
