--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -5,10 +5,15 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 50px;
+
   background-color: $backgroundTwo;
+  border: 2px solid black;
+  width: 40%;
+  margin-left: 30%;
+  margin-top: 2%;
   .contentDiv {
     display: flex;
+    padding: 50px;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
@@ -18,6 +23,8 @@
   .button {
     width: 100px;
     height: 50px;
+    border: 1px solid black;
+    box-shadow: 2px 2px;
     border-radius: 10px;
     margin-top: 30px;
     background-color: $backgroundOne;
