--- a/app/quasar/page.module.scss
+++ b/app/quasar/page.module.scss
@@ -17,8 +17,15 @@
   align-items: center;
   padding: 20px;
   height: 100vh;
+  .divGame {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin-top: 20px;
+  }
   .number {
-    margin-left: 80px;
     margin-bottom: 20px;
   }
   .button {
@@ -26,6 +33,6 @@
     color: white;
     padding: 10px;
     margin-left: 5px;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
   }
 }
