--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -26,7 +26,12 @@
     border: 1px solid black;
     box-shadow: 2px 2px;
     border-radius: 10px;
-    margin-top: 30px;
     background-color: $backgroundOne;
+  }
+  .button:hover {
+    cursor: pointer;
+  }
+  .textContent {
+    margin-bottom: 30px;
   }
 }
