--- a/app/components/quasar.module.scss
+++ b/app/components/quasar.module.scss
@@ -47,9 +47,10 @@
   .button {
     background-color: blue;
     color: white;
-    padding: 10px;
+    padding: 20px;
     margin-left: 5px;
     margin-bottom: 5px;
+    border-radius: 5px;
   }
 }
 
