--- a/app/resume/page.module.scss
+++ b/app/resume/page.module.scss
@@ -1,7 +1,7 @@
 @import "/app/styles/variables";
 
 .mainContent {
-  background-color: $backgroundTwo;
+  background: $backgroundTwo;
   margin: 0;
   .firstSection {
     margin: 15px;
