--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -11,5 +11,10 @@
   text-decoration: none;
 }
 body {
-  background-color: #edf4ed;
+  background: rgb(65, 83, 122);
+  background: linear-gradient(
+    90deg,
+    rgb(65, 83, 122) 0%,
+    hsla(220, 78%, 29%, 1) 100%
+  );
 }
