--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -2,35 +2,33 @@
 
 .main {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  background-color: $backgroundTwo;
-  border: 2px solid black;
-  width: 80%;
-  margin-left: 10%;
-  margin-top: 2%;
-  .contentDiv {
+  .introDiv {
     display: flex;
-    padding: 50px;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 50px;
-    max-width: 600px;
-  }
-  .button {
-    width: 100px;
-    height: 50px;
-    border: 1px solid black;
-    box-shadow: 2px 2px;
-    border-radius: 10px;
-    background-color: $backgroundOne;
-  }
-  .button:hover {
-    cursor: pointer;
+    .landingImage {
+      margin-top: 3.7rem;
+      height: 500px;
+      z-index: 0;
+    }
+    .titles {
+      font-weight: 900;
+      z-index: 1;
+      max-width: 400px;
+      font-size: 80px;
+      margin-top: 200px;
+      margin-left: 100px;
+    }
+    .textColor {
+      color: #5fc52e;
+    }
   }
   .textContent {
-    margin-bottom: 30px;
+    z-index: 1;
+    font-weight: 600;
+    max-width: 400px;
+    margin-left: 800px;
+    margin-top: 200px;
+    font-size: 28px;
   }
 }
