--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -11,10 +11,5 @@
   text-decoration: none;
 }
 body {
-  background: rgb(65, 83, 122);
-  background: linear-gradient(
-    90deg,
-    rgb(65, 83, 122) 0%,
-    hsla(220, 78%, 29%, 1) 100%
-  );
+  background: #f5f5f5;
 }
