implemented mobile styling for landing page

--- a/app/components/header.module.scss
+++ b/app/components/header.module.scss
@@ -44,7 +44,7 @@
     .dropdownShow {
       display: flex;
       flex-direction: column;
-      text-align: right;
+      text-align: left;
       justify-content: space-between;
       background-color: #558b6e;
       height: 100px;
