--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -52,4 +52,76 @@
       }
     }
   }
+  .arrowUp {
+    width: 0;
+    height: 0;
+    position: absolute;
+    border-left: 75px solid transparent;
+    border-right: 75px solid transparent;
+    border-bottom: 75px solid whitesmoke;
+    margin-top: 667px;
+    margin-right: 1300px;
+  }
+}
+
+.mainMobile {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  .imageDiv {
+    width: 100%;
+    height: 55%;
+    position: absolute;
+  }
+  .introDiv {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 45%;
+    .landingImage {
+      margin-top: 3.7rem;
+      height: 500px;
+    }
+    .titles {
+      font-weight: 900;
+      z-index: 1;
+      font-size: 40px;
+      margin-top: 100px;
+      margin-left: 30px;
+    }
+    .textColor {
+      color: #558b6e;
+    }
+  }
+  .majorTextDiv {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    justify-content: space-evenly;
+    .minorTextDiv {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 40px;
+      .minorTitles {
+        font-size: 30px;
+        margin-bottom: 20px;
+      }
+      .textContent {
+        width: 300px;
+        font-weight: 600;
+        font-size: 16px;
+      }
+    }
+  }
+  .arrowUp {
+    width: 0;
+    height: 0;
+    position: absolute;
+    border-left: 45px solid transparent;
+    border-right: 45px solid transparent;
+    border-bottom: 45px solid whitesmoke;
+    margin-top: 373px;
+    margin-right: 200px;
+  }
 }
