--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   .imageDiv {
     width: 100%;
-    height: 80%;
+    height: 728px;
     position: absolute;
   }
   .introDiv {
@@ -70,7 +70,7 @@
   flex-direction: column;
   .imageDiv {
     width: 100%;
-    height: 55%;
+    height: 365px;
     position: absolute;
   }
   .introDiv {
@@ -121,7 +121,7 @@
     border-left: 45px solid transparent;
     border-right: 45px solid transparent;
     border-bottom: 45px solid whitesmoke;
-    margin-top: 373px;
+    margin-top: 320px;
     margin-right: 200px;
   }
 }
