--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -13,12 +13,6 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 45%;
-    .landingImage {
-      margin-top: 3.7rem;
-      height: 500px;
-      z-index: 0;
-    }
     .titles {
       font-weight: 900;
       z-index: 1;
@@ -34,6 +28,7 @@
   .majorTextDiv {
     display: flex;
     margin-top: 50px;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     width: 100%;
     margin-bottom: 100px;
@@ -42,8 +37,8 @@
       flex-direction: column;
       align-items: center;
       .minorTitles {
+        margin-top: 10px;
         font-size: 40px;
-        margin-bottom: 20px;
       }
       .textContent {
         width: 400px;
@@ -59,70 +54,29 @@
     border-left: 75px solid transparent;
     border-right: 75px solid transparent;
     border-bottom: 75px solid whitesmoke;
-    margin-top: 667px;
-    margin-right: 65%;
+    margin-top: 653px;
+    margin-right: 68%;
   }
 }
-
-.mainMobile {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  .imageDiv {
-    width: 100%;
-    height: 365px;
-    position: absolute;
-  }
-  .introDiv {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 45%;
-    .landingImage {
-      margin-top: 3.7rem;
-      height: 500px;
+@media only screen and (max-width: 1200px) {
+  .main {
+    .imageDiv {
+      height: 365px;
     }
-    .titles {
-      font-weight: 900;
-      z-index: 1;
-      font-size: 40px;
-      margin-top: 100px;
-      margin-left: 30px;
-    }
-    .textColor {
-      color: #558b6e;
-    }
-  }
-  .majorTextDiv {
-    display: flex;
-    flex-direction: column;
-    margin-top: 10%;
-    justify-content: space-evenly;
-    z-index: 1;
-    .minorTextDiv {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 40px;
-      .minorTitles {
-        font-size: 30px;
-        margin-bottom: 20px;
-      }
-      .textContent {
-        width: 300px;
-        font-weight: 600;
-        font-size: 16px;
+    .introDiv {
+      .titles {
+        font-size: 40px;
+        margin-top: 100px;
+        margin-left: 30px;
+        max-width: 400px;
       }
     }
-  }
-  .arrowUp {
-    width: 0;
-    height: 0;
-    position: absolute;
-    border-left: 45px solid transparent;
-    border-right: 45px solid transparent;
-    border-bottom: 45px solid whitesmoke;
-    margin-top: 320px;
-    margin-right: 60%;
+    .arrowUp {
+      border-left: 45px solid transparent;
+      border-right: 45px solid transparent;
+      border-bottom: 45px solid whitesmoke;
+      margin-top: 320px;
+      margin-right: 60%;
+    }
   }
 }
