--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -39,6 +39,7 @@
       .minorTitles {
         margin-top: 10px;
         font-size: 40px;
+        margin-bottom: 20px;
       }
       .textContent {
         width: 400px;
