updated quasar styling

--- a/app/components/header.module.scss
+++ b/app/components/header.module.scss
@@ -19,6 +19,7 @@
     text-decoration: none;
     color: black;
     transition: all 0.3s ease-in-out;
+    margin-right: 5px;
   }
   .logo {
     margin-left: 5px;
