--- a/app/components/quasar.module.scss
+++ b/app/components/quasar.module.scss
@@ -36,6 +36,7 @@
   .button {
     background-color: blue;
     color: white;
+    border: lightblue solid 3px;
     padding: 20px;
     margin-left: 5px;
     margin-bottom: 5px;
